--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2018"
 serde = { version = "1.0", optional = true }
 codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
 sr-primitives = { git = "https://github.com/paritytech/substrate.git", default-features = false }
-srml-support = { package = "srml-support", git = "https://github.com/paritytech/substrate.git", default-features = false }
-srml-system = { package = "srml-system", git = "https://github.com/paritytech/substrate.git", default-features = false }
+paint-support = { package = "paint-support", git = "https://github.com/paritytech/substrate.git", default-features = false }
+paint-system = { package = "paint-system", git = "https://github.com/paritytech/substrate.git", default-features = false }
 runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git", default-features = false }
 rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate.git", default-features = false }
 
@@ -17,7 +17,7 @@ traits = { package = "orml-traits", path = "../traits", default-features = false
 
 [dev-dependencies]
 primitives = { package = "substrate-primitives",  git = "https://github.com/paritytech/substrate.git", default-features = false }
-srml-balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate.git" }
+paint-balances = { package = "paint-balances", git = "https://github.com/paritytech/substrate.git" }
 tokens = { package = "orml-tokens", path = "../tokens" }
 
 [features]
@@ -26,8 +26,8 @@ std = [
 	"serde",
 	"codec/std",
 	"sr-primitives/std",
-	"srml-support/std",
-	"srml-system/std",
+	"paint-support/std",
+	"paint-system/std",
 	"rstd/std",
 	"traits/std",
 	"runtime-io/std",
