--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,17 @@ edition = "2018"
 serde = { version = "1.0", optional = true }
 codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
 sr-primitives = { git = "https://github.com/paritytech/substrate.git", default-features = false }
-paint-support = { package = "paint-support", git = "https://github.com/paritytech/substrate.git", default-features = false }
-paint-system = { package = "paint-system", git = "https://github.com/paritytech/substrate.git", default-features = false }
 runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git", default-features = false }
 rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate.git", default-features = false }
 
-traits = { package = "orml-traits", path = "../traits", default-features = false }
+palette-support = { git = "https://github.com/paritytech/substrate.git", default-features = false }
+palette-system = { git = "https://github.com/paritytech/substrate.git", default-features = false }
+
+orml-traits = { path = "../traits", default-features = false }
 
 [dev-dependencies]
 primitives = { package = "substrate-primitives",  git = "https://github.com/paritytech/substrate.git", default-features = false }
-paint-balances = { package = "paint-balances", git = "https://github.com/paritytech/substrate.git" }
+pallet-balances = { package = "pallet-balances", git = "https://github.com/paritytech/substrate.git" }
 tokens = { package = "orml-tokens", path = "../tokens" }
 
 [features]
@@ -26,9 +27,9 @@ std = [
 	"serde",
 	"codec/std",
 	"sr-primitives/std",
-	"paint-support/std",
-	"paint-system/std",
 	"rstd/std",
-	"traits/std",
 	"runtime-io/std",
+	"palette-support/std",
+	"palette-system/std",
+	"orml-traits/std",
 ]
