add feed_values (#36)
* add feed_values

* fix tests

* workaround check wasm issue

* workaround build issue

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,10 @@ palette-system = { git = "https://github.com/paritytech/substrate.git", default-
 orml-traits = { path = "../traits", default-features = false }
 
 [dev-dependencies]
-primitives = { package = "substrate-primitives",  git = "https://github.com/paritytech/substrate.git", default-features = false }
+primitives = { package = "substrate-primitives",  git = "https://github.com/paritytech/substrate.git" }
 pallet-balances = { package = "pallet-balances", git = "https://github.com/paritytech/substrate.git" }
 tokens = { package = "orml-tokens", path = "../tokens" }
+substrate-runtime-interface = { git = "https://github.com/paritytech/substrate.git", features = ['disable_target_static_assertions'] }
 
 [features]
 default = ["std"]
