better workaround the wasm build issue (#40)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,8 @@ orml-traits = { path = "../traits", default-features = false }
 primitives = { package = "substrate-primitives",  git = "https://github.com/paritytech/substrate.git" }
 pallet-balances = { package = "pallet-balances", git = "https://github.com/paritytech/substrate.git" }
 tokens = { package = "orml-tokens", path = "../tokens" }
-substrate-runtime-interface = { git = "https://github.com/paritytech/substrate.git", features = ['disable_target_static_assertions'] }
+
+clear_on_drop = { version = "0.2.3", features = ["no_cc"] }	# https://github.com/paritytech/substrate/issues/4179
 
 [features]
 default = ["std"]
