--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2018"
 serde = { version = "1.0.101", optional = true }
 codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
 sp-runtime = { version = "2.0.0-alpha.5", default-features = false }
-runtime-io = { package = "sp-io", version = "2.0.0-alpha.5", default-features = false }
-rstd = { package = "sp-std", version = "2.0.0-alpha.5", default-features = false }
+sp-io = { version = "2.0.0-alpha.5", default-features = false }
+sp-std = { version = "2.0.0-alpha.5", default-features = false }
 
 frame-support = { version = "2.0.0-alpha.5", default-features = false }
 frame-system = { version = "2.0.0-alpha.5", default-features = false }
@@ -17,8 +17,8 @@ frame-system = { version = "2.0.0-alpha.5", default-features = false }
 orml-traits = { path = "../traits", default-features = false }
 
 [dev-dependencies]
-primitives = { package = "sp-core", version = "2.0.0-alpha.5", default-features = false }
-pallet-balances = { package = "pallet-balances", version = "2.0.0-alpha.5" }
+sp-core = { version = "2.0.0-alpha.5", default-features = false }
+pallet-balances = { version = "2.0.0-alpha.5" }
 tokens = { package = "orml-tokens", path = "../tokens" }
 
 clear_on_drop = { version = "0.2.3", features = ["no_cc"] }	# https://github.com/paritytech/substrate/issues/4179
@@ -29,8 +29,8 @@ std = [
 	"serde",
 	"codec/std",
 	"sp-runtime/std",
-	"rstd/std",
-	"runtime-io/std",
+	"sp-std/std",
+	"sp-io/std",
 	"frame-support/std",
 	"frame-system/std",
 	"orml-traits/std",
