--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,8 @@
 [package]
 name = "orml-currencies"
+description = "Provide `MultiCurrency` implementation using `pallet-balances` and `orml-tokens` module."
+repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/currencies"
+license-file = "../LICENSE"
 version = "0.0.1"
 authors = ["Laminar Developers <hello@laminar.one>"]
 edition = "2018"
@@ -14,7 +17,7 @@ sp-std = { version = "2.0.0-alpha.6", default-features = false }
 frame-support = { version = "2.0.0-alpha.6", default-features = false }
 frame-system = { version = "2.0.0-alpha.6", default-features = false }
 
-orml-traits = { path = "../traits", default-features = false }
+orml-traits = { path = "../traits", version = "0.0.1", default-features = false }
 
 [dev-dependencies]
 sp-core = { version = "2.0.0-alpha.6", default-features = false }
