--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,8 @@
 name = "orml-currencies"
 description = "Provide `MultiCurrency` implementation using `pallet-balances` and `orml-tokens` module."
 repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/currencies"
-license-file = "../LICENSE"
-version = "0.0.1"
+license = "Apache-2.0"
+version = "0.1.0"
 authors = ["Laminar Developers <hello@laminar.one>"]
 edition = "2018"
 
@@ -17,7 +17,7 @@ sp-std = { version = "2.0.0-alpha.7", default-features = false }
 frame-support = { version = "2.0.0-alpha.7", default-features = false }
 frame-system = { version = "2.0.0-alpha.7", default-features = false }
 
-orml-traits = { path = "../traits", version = "0.0.1", default-features = false }
+orml-traits = { path = "../traits", version = "0.1.0", default-features = false }
 
 [dev-dependencies]
 sp-core = { version = "2.0.0-alpha.7", default-features = false }
