--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ frame-support = { version = "2.0.0", default-features = false }
 frame-system = { version = "2.0.0", default-features = false }
 
 orml-traits = { path = "../traits", version = "0.3.3-dev", default-features = false }
+orml-utilities = { path = "../utilities", version = "0.3.3-dev", default-features = false }
 
 [dev-dependencies]
 sp-core = { version = "2.0.0", default-features = false }
@@ -37,4 +38,5 @@ std = [
 	"frame-support/std",
 	"frame-system/std",
 	"orml-traits/std",
+	"orml-utilities/std",
 ]
