--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,27 +3,27 @@ name = "orml-currencies"
 description = "Provide `MultiCurrency` implementation using `pallet-balances` and `orml-tokens` module."
 repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/currencies"
 license = "Apache-2.0"
-version = "0.4.0-dev"
+version = "0.4.0"
 authors = ["Laminar Developers <hello@laminar.one>"]
 edition = "2018"
 
 [dependencies]
 serde = { version = "1.0.111", optional = true }
 codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
-sp-runtime = { version = "2.0.1", default-features = false }
-sp-io = { version = "2.0.1", default-features = false }
-sp-std = { version = "2.0.1", default-features = false }
+sp-runtime = { version = "3.0.0", default-features = false }
+sp-io = { version = "3.0.0", default-features = false }
+sp-std = { version = "3.0.0", default-features = false }
 
-frame-support = { version = "2.0.1", default-features = false }
-frame-system = { version = "2.0.1", default-features = false }
+frame-support = { version = "3.0.0", default-features = false }
+frame-system = { version = "3.0.0", default-features = false }
 
-orml-traits = { path = "../traits", version = "0.4.0-dev", default-features = false }
-orml-utilities = { path = "../utilities", version = "0.4.0-dev", default-features = false }
+orml-traits = { path = "../traits", version = "0.4.0", default-features = false }
+orml-utilities = { path = "../utilities", version = "0.4.0", default-features = false }
 
 [dev-dependencies]
-sp-core = { version = "2.0.1", default-features = false }
-pallet-balances = "2.0.1"
-orml_tokens = { package = "orml-tokens", path = "../tokens", version = "0.4.0-dev" }
+sp-core = { version = "3.0.0", default-features = false }
+pallet-balances = "3.0.0"
+orml_tokens = { package = "orml-tokens", path = "../tokens", version = "0.4.0" }
 
 [features]
 default = ["std"]
