format Cargo.toml (#374)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ orml-utilities = { path = "../utilities", version = "0.4.1-dev", default-feature
 funty = { version = "=1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105
 
 [dev-dependencies]
-sp-core = { version = "3.0.0", default-features = false }
+sp-core = "3.0.0"
 pallet-balances = "3.0.0"
 orml_tokens = { package = "orml-tokens", path = "../tokens", version = "0.4.1-dev" }
 
